--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&family=Open+Sans:ital,wght@1,500&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Mulish", sans-serif;
+  
+}
+.navbar {
+  background-color: white;
+  
+  
+}
+.navbar-brand{
+  font-size: 1.9rem !important;
+  color: #7900FF !important;
+  font-family: sans-serif;
+  font-weight: 600;
+}
+.navbar a{
+  font-size: 1.3rem;
+  font-family: sans-serif;
+  font-weight: 300;
+  text-transform: capitalize;
+  margin-left: 20px;
+}
+.menu_active{
+  font-weight: bold;
+  border-bottom: 1px solid #7900FF;
+}
+.navbar a:hover{
+  color: #344ddb !important;
+}
+.btn-cls{
+  width: 100%;
+  height:40%;
+}
+.Resume-button a{
+  font-weight: 300;
+    
+  color: black;
+  margin-right: 2rem;
+  border: 1px solid blue;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width:991px) {
+  .navbar-brand{
+    font-size: 1.5rem !important;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  .menu_active {
+    font-weight: bold;
+    border-bottom: none;
   }
-}
